finish what i've started.

--- a/Q5/MobileRefactoryId/app/src/main/res/layout/activity_main.xml
+++ b/Q5/MobileRefactoryId/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_main"
+        android:background="#FBFCFF"
         android:layout_below="@+id/top_bar"
         android:layout_above="@+id/bottom_bar"
         android:layout_width="match_parent"
