--- a/Q5/MobileRefactoryId/app/src/main/res/layout/bottom_bar.xml
+++ b/Q5/MobileRefactoryId/app/src/main/res/layout/bottom_bar.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="83dp"
+    android:background="@color/white"
     android:orientation="horizontal"
     android:weightSum="9"
     android:baselineAligned="false">
