--- a/Q5/MobileRefactoryId/app/src/main/res/layout/item_calendar.xml
+++ b/Q5/MobileRefactoryId/app/src/main/res/layout/item_calendar.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView android:id="@+id/tixtTitle"
+    android:layout_height="wrap_content">
+    <TextView android:id="@+id/textTitle"
         android:textSize="16sp"
         android:textStyle="bold"
         android:text="@string/sun_sept_14_2020"
