--- a/Q5/MobileRefactoryId/app/src/main/res/layout/item_title.xml
+++ b/Q5/MobileRefactoryId/app/src/main/res/layout/item_title.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <TextView android:id="@+id/textTitle"
-        android:textSize="16sp"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:padding="8dp"
+        android:text="@string/task_list"
+        android:textColor="#525C77"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
