--- a/Q5/MobileRefactoryId/app/src/main/res/layout/item_inner_horizontal.xml
+++ b/Q5/MobileRefactoryId/app/src/main/res/layout/item_inner_horizontal.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:gravity="center" android:layout_width="33dp"
     android:background="#F0F3F8"
-    android:layout_margin="5dp"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginVertical="10dp"
     android:layout_height="83dp" android:id="@+id/horizon_item">
     <TextView android:id="@+id/dot_sign"
         android:visibility="invisible"
@@ -12,7 +13,7 @@
     <TextView android:id="@+id/text_day"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:text="M"
+        android:text="@string/m"
         android:textColor="#596279"
         android:layout_marginVertical="7dp"
         android:layout_width="wrap_content"
@@ -20,7 +21,7 @@
     <TextView android:id="@+id/text_date"
         android:textSize="13sp"
         android:textStyle="bold"
-        android:text="14"
+        android:text="@string/_14"
         android:textColor="#7F8A9C"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
